fix(dashboard) : fix overflow style
- fix overflow style in connections table

--- a/app/components/CreateConnection/style.less
+++ b/app/components/CreateConnection/style.less
@@ -5,13 +5,3 @@
   width: 80%;
   margin: auto;
 }
-
-.dropDown {
-  display: inline-block;
-  text-align: left;
-  margin: 0px 50px 50px 50px;
-}
-
-.createButton {
-  display: inline-block;
-}
