--- a/app/components/CreateUser/style.less
+++ b/app/components/CreateUser/style.less
@@ -7,6 +7,7 @@
   padding: 40px 50px;
 
     table {
+      overflow: hidden !important;
       th, tr, td {
         text-align: center !important;
       }
